@@ -1,1 +1,1 @@
-syndie.version=0.918b
+syndie.version=0.919b
