@@ -28,23 +28,23 @@
 <h1>Download</h1>
 <!--
 Windows binaries:<ul>
-<li><a href="http://syndie.i2p.net/dist/syndie-0.918b.win.exe">syndie-0.918b.win.exe</a>
-   (<a href="http://syndie.i2p.net/dist/syndie-0.918b.win.exe.sig">GPG signature</a>) <b>[note: does not yet exist]</b></li>
+<li><a href="http://syndie.i2p.net/dist/syndie-0.919b.win.exe">syndie-0.919b.win.exe</a>
+   (<a href="http://syndie.i2p.net/dist/syndie-0.919b.win.exe.sig">GPG signature</a>) <b>[note: does not yet exist]</b></li>
 <li>Download and run the executable installer.</li>
 <li>Prerequisites: None</li>
 </ul>
 -->
 
 Binaries:<ul>
-<li><a href="dist/syndie-0.918b.bin.exe">syndie-0.918b.bin.exe</a>
-   (<a href="dist/syndie-0.918b.bin.exe.sig">GPG signature</a>)</li>
+<li><a href="dist/syndie-0.919b.bin.exe">syndie-0.919b.bin.exe</a>
+   (<a href="dist/syndie-0.919b.bin.exe.sig">GPG signature</a>)</li>
 <li>Download and run the executable installer.<br />
     <i>(*nix and OS X users, run the executable by typing
-    "<code>java -jar syndie-0.918b.bin.exe</code>".  
+    "<code>java -jar syndie-0.919b.bin.exe</code>".  
     yes, really, you want the .exe)</i></li>
-<li>Alternately, <a href="dist/syndie-0.918b.bin.zip">syndie-0.918b.bin.zip</a>
-   (<a href="dist/syndie-0.918b.bin.zip.sig">GPG signature</a>)
-   can be used instead - it unzips to ./syndie-0.918b/.  This method is
+<li>Alternately, <a href="dist/syndie-0.919b.bin.zip">syndie-0.919b.bin.zip</a>
+   (<a href="dist/syndie-0.919b.bin.zip.sig">GPG signature</a>)
+   can be used instead - it unzips to ./syndie-0.919b/.  This method is
    necessary when installing without a graphical interface, but does not
    create desktop or start menu shortcuts, and does not include an uninstaller.
    </li>
@@ -56,8 +56,8 @@ Binaries:<ul>
 </ul>
 
 Source:<ul>
-<li><a href="dist/syndie-0.918b.src.tar.bz2">syndie-0.918b.src.tar.bz2</a>
-  (<a href="dist/syndie-0.918b.src.tar.bz2.sig">GPG signature</a>)</li>
+<li><a href="dist/syndie-0.919b.src.tar.bz2">syndie-0.919b.src.tar.bz2</a>
+  (<a href="dist/syndie-0.919b.src.tar.bz2.sig">GPG signature</a>)</li>
 <li>Download and extract the archive, then read the INSTALL file</li>
 <li>Prerequisites:
     <a href="http://ant.apache.org/">ant 1.6.5</a>, plus
